Change ul to nav

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 <body>
   <header>
     <h1>Basic HTML Fundamentals</h1>
-    <ul>
+    <nav>
       <li><a href="#">link1</a></li>
       <li><a href="#">link2</a></li>
       <li><a href="login.html">Login</a></li>
-    </ul>
+    </nav>
   </header>
   <main>
     <h2>Headline</h2>
