--- a/login.html
+++ b/login.html
@@ -14,11 +14,11 @@
 <body>
   <header>
     <h1>Basic HTML Fundamentals</h1>
-    <ul>
+    <nav>
       <li><a href="#">link1</a></li>
       <li><a href="#">link2</a></li>
       <li><a href="404.html">404</a></li>
-    </ul>
+    </nav>
   </header>
   <main>
     <h2>Login</h2>
