--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="127.0.0.1">
   <meta property="og:image" content="img/lexicon.png">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
