Front-End, Assignment 2 - CSS

--- a/login.html
+++ b/login.html
@@ -9,6 +9,8 @@
   <meta property="og:title" content="Basic HTML Fundamentals">
   <meta property="og:type" content="website">
   <meta property="og:url" content="127.0.0.1">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
